feat: .jar now can be generated, pending erase button